--- a/projeto_inicial/index.html
+++ b/projeto_inicial/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -27,7 +27,9 @@
       
       </ul>
     </div>
-    <script src="assets/js/ListaDeTarefas.js"></script>
+    <script type="module" src="js/Master.js"></script>
+    <script type="module" src="js/DeletaTarefa.js"></script>
+    <script type="module" src="js/ConcluiTarefa.js"></script>
 </body>
 
 </html>
