Part2 do curso colocando data e hora na lista

--- a/projeto_inicial/index.html
+++ b/projeto_inicial/index.html
@@ -20,13 +20,19 @@
 
       <form class="form" action="">
         <input class="form-input" type="text" data-form-input>
+        <input type="datetime-local" placeholder="Dia/Mês/Ano  00:00" data-form-date>
         <button class="form-button" data-form-button> Novo Item </button>
       </form>
 
       <ul class="list" data-list>
-      
+
       </ul>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js
+
+
+
+"></script>
     <script type="module" src="js/Master.js"></script>
     <script type="module" src="js/DeletaTarefa.js"></script>
     <script type="module" src="js/ConcluiTarefa.js"></script>
