Utilizar componente de calendário,  Manipular datas, Desestruturar objetos em

--- a/projeto_inicial/index.html
+++ b/projeto_inicial/index.html
@@ -15,7 +15,7 @@
   <div class="app">
     <div class="todo-list">
       <h1 class="title">
-        Ceep
+        Tarefas diárias por: Jean
       </h1>
 
       <form class="form" action="">
