Melhorando fluxo de cadastro da lista de items

--- a/projeto_inicial/index.html
+++ b/projeto_inicial/index.html
@@ -28,14 +28,11 @@
 
       </ul>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js
-
-
-
-"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script type="module" src="js/Master.js"></script>
     <script type="module" src="js/DeletaTarefa.js"></script>
     <script type="module" src="js/ConcluiTarefa.js"></script>
+    <script type="module" src="js/CriarData.js"></script>
 </body>
 
 </html>
